--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andres Monsalvo</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+    <link rel="stylesheet" type="text/css" href="styles.css"> 
   </head>
   <body>
     <main>
@@ -35,7 +35,7 @@
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section class="project-item">
-          <img src="img/thumbnail-2.jpg" alt="description of image">
+          <img src="thumbnail-2.jpg" alt="description of image">
           <h3>Project Name</h3>
           <p>Have been involved in numerous projects involving engineering software applications for assisted design and simulations. My roles included mechanical, process and design engineering. Companies ranged from multidiscipline engineering teams to custom manufacturing.</p>
           <a href="#" target="_blank">View project / case study</a>
