--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <section class="profile"> 
       <div class="content-wrap">
         <h1>Andres Monsalvo</h1>
-        <h2>Engineer + Full Stack Developer + Entrepreneur</h2>
+        <h2>Front and Back End Developer</h2>
 
-        <p>As a developer, I specialize in creating front-end modular and scalable architectures as well as back-end applications. As an engineer, I am avid learner keen on improving designs and processes through team collaboration and software applications. I am also exploring more entrepreneurial pursuits through my e-commerce store NewTEK Gadgets, which I run by myself in my spare time.</p>
+        <p>As a developer, I specialize in creating front-end modular and scalable architectures as well as back-end applications. As an engineer, I am avid learner keen on improving designs and processes through team collaboration and software applications.</p>
         <p>Areas of Expertise & Skills</p>
         <ul>
-            <li>Integrity</li>
-            <li>Leadership</li>
-            <li>Product Design</li>
-            <li>Adaptability</li>
-            <li>Problem Solving</li>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Javascript5</li>
+            <li>C#</li>
+            <li>SQL Server</li>
         </ul>
         <br/>
       </div>
@@ -31,13 +31,13 @@
       <section class="projects">
       <div class="content-wrap">
         <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a href="http://andresmonsalvo.com">andresmonsalvo.com</a>.</p>
+        <p>View selected projects below. More information can be found at <a href="https://andresmonsalvo.github.io/">https://andresmonsalvo.github.io/</a>.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section class="project-item">
           <img src="thumbnail-2.jpg" alt="description of image">
-          <h3>Project Name</h3>
-          <p>Have been involved in numerous projects involving engineering software applications for assisted design and simulations. My roles included mechanical, process and design engineering. Companies ranged from multidiscipline engineering teams to custom manufacturing.</p>
+          <h3>Simfoni Website</h3>
+          <p>Let team of developers and participated in the design process of html, css and javascript portions of the project using collaboration tools as Github and project management tools as Jira, while following Agile concepts.</p>
           <a href="#" target="_blank">View project / case study</a>
         </section>
         <!-- End of Project block. -->
@@ -48,21 +48,17 @@
       <section class="work">
       <div class="content-wrap">
         <h2>Work Experience</h2>
-        <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
+        <p>Experienced engineer focused on product design and customer focus, working on collaborative team environments.</p>
 
         <!-- Copy this whole <section> block to add more jobs. -->
         <section>
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
+          <h3>Highlights</h3>
+          <p>Optimization of Designs:</p>
+          <p>Researched, evaluated and implemented software applications to improve designs, production and operational processes.</p>
+          <p>Product Development:</p>
+          <p>Led website development team towards creating a functional website for a company dedicated to provide guidance and support to entrepreneurs.</p>
+          <p>Project Lyfe Cycle:</p>
+          <p>Participated in teams responsible for product conceptual design and throughout its complete life cycle, including initiation, planning, execution, control / monitoring and closing activities.</p>
         </section>
         <!-- End of Job block. -->
       </div>
@@ -75,9 +71,17 @@
 
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <h3>Bow Valley College - Calgary</h3>
+          <p>Full Stack Software Development, 2020</p>
+          <p>Web development, C# Programming and Databases.</p>
+        </section>
+        <section>
+          <h3>University of Calgary - Calgary</h3>
+          <p>Project Management Professional course, 2015</p>
+        </section>
+        <section>
+          <h3>University of Calgary - Calgary</h3>
+          <p>Master of Engineering (Mechanical), 2012</p>
         </section>
         <!-- End of School block. -->
       </div>
@@ -91,10 +95,9 @@
         <!-- Social media and contact links. Add or remove any networks. -->
         <ul class="contact-list">
           <li><a href="mailto:andresmonsalvo@yahoo.ca">andresmonsalvo@yahoo.ca</a></li>
-          <li><a href="http://xxxx.com" target="_blank">yourwebsite.com</a></li>
+          <li><a href="https://andresmonsalvo.github.io/" target="_blank">GitHub</a></li>
           <li><a href="https://www.linkedin.com/in/andresmonsalvo/" target="_blank">LinkedIn</a></li>
           <li><a href="https://www.facebook.com/andres.f.monsalvo" target="_blank">Facebook</a></li>
-          <li><a href="http://newtekgadgets.com" target="_blank">newtekgadgets.com</a></li>
         </ul>
       </div>
       </footer>
