--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <ul class="contact-list">
           <li><a href="mailto:andresmonsalvo@yahoo.ca">andresmonsalvo@yahoo.ca</a></li>
           <li><a href="https://andresmonsalvo.github.io/" target="_blank">GitHub</a></li>
+          <li><a href="tel:15877000940">(587) 700 0940</a></li>
           <li><a href="https://www.linkedin.com/in/andresmonsalvo/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/andres.f.monsalvo" target="_blank">Facebook</a></li>
         </ul>
       </div>
       </footer>
