--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
       <!-- ***********  PROJECTS / PORTFOLIO  ******* -->
       <section class="projects">
       <div class="content-wrap">
-        <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a href="https://andresmonsalvo.github.io/">https://andresmonsalvo.github.io/</a>.</p>
+        <h2 class="centered">Featured Projects</h2>
+        <p>View selected projects below.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section class="project-item">
           <img src="thumbnail-2.jpg" alt="description of image">
           <h3>Simfoni Website</h3>
           <p>Let team of developers and participated in the design process of html, css and javascript portions of the project using collaboration tools as Github and project management tools as Jira, while following Agile concepts.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <!--<a href="#" target="_blank">View project / case study</a>-->
         </section>
         <!-- End of Project block. -->
       </div>
@@ -47,12 +47,12 @@
       <!-- ***********  WORK EXPERIENCE  ************** -->
       <section class="work">
       <div class="content-wrap">
-        <h2>Work Experience</h2>
+        <h2 class="centered">Work Experience</h2>
         <p>Experienced engineer focused on product design and customer focus, working on collaborative team environments.</p>
 
         <!-- Copy this whole <section> block to add more jobs. -->
         <section>
-          <h3>Highlights</h3>
+          <h3 class="centered">Highlights</h3>
           <p>Optimization of Designs:</p>
           <p>Researched, evaluated and implemented software applications to improve designs, production and operational processes.</p>
           <p>Product Development:</p>
@@ -67,7 +67,7 @@
       <!-- ***********  EDUCATION & CERTIFICATIONS ********** -->
       <section class="education">
       <div class="content-wrap">
-        <h2>Education</h2>
+        <h2 class="centered">Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
