--- a/index.html
+++ b/index.html
@@ -1,105 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andres Monsalvo</title>
-    <link rel="stylesheet" type="text/css" href="style.css"> 
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <main>
       <!-- **************  ABOUT / PROFILE  ************** -->
-      <section class="profile"> 
-      <div class="content-wrap">
-        <h1>Andres Monsalvo</h1>
-        <h2>Front and Back End Developer</h2>
-
-        <p>As a developer, I specialize in creating front-end modular and scalable architectures as well as back-end applications. As an engineer, I am avid learner keen on improving designs and processes through team collaboration and software applications.</p>
-        <p>Areas of Expertise & Skills</p>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>Javascript5</li>
-            <li>C#</li>
+      <section class="profile">
+        <div class="content-wrap">
+          <h1>Andres Monsalvo</h1>
+          <h2>Front and Back End Developer</h2>
+          <p>
+            As a developer, I specialize in creating front-end modular and
+            scalable architectures as well as back-end applications. As an
+            engineer, I am avid learner keen on improving designs and processes
+            through team collaboration and software applications.
+          </p>
+          <h3>Areas of Expertise & Skills:</h3>
+          <ul>
+            <li>HTML5 |</li>
+            <li>CSS3 |</li>
+            <li>Javascript5 |</li>
+            <li>C# |</li>
             <li>SQL Server</li>
-        </ul>
-        <br/>
-      </div>
+          </ul>
+          <br />
+        </div>
       </section>
 
       <!-- ***********  PROJECTS / PORTFOLIO  ******* -->
       <section class="projects">
-      <div class="content-wrap">
-        <h2 class="centered">Featured Projects</h2>
-        <p>View selected projects below.</p>
+        <div class="content-wrap">
+          <h2 class="centered">Featured Projects</h2>
+          <p>View selected projects below.</p>
 
-        <!-- Copy the whole <section> block to add more projects. -->
-        <section class="project-item">
-          <img src="thumbnail-2.jpg" alt="description of image">
-          <h3>Simfoni Website</h3>
-          <p>Let team of developers and participated in the design process of html, css and javascript portions of the project using collaboration tools as Github and project management tools as Jira, while following Agile concepts.</p>
-          <!--<a href="#" target="_blank">View project / case study</a>-->
-        </section>
-        <!-- End of Project block. -->
-      </div>
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item">
+            <img src="thumbnail-2.jpg" alt="description of image" />
+            <h3>Simfoni Website</h3>
+            <p>
+              Let team of developers and participated in the design process of
+              html, css and javascript portions of the project using
+              collaboration tools as Github and project management tools as
+              Jira, while following Agile concepts.
+            </p>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <!-- End of Project block. -->
+        </div>
       </section>
 
       <!-- ***********  WORK EXPERIENCE  ************** -->
       <section class="work">
-      <div class="content-wrap">
-        <h2 class="centered">Work Experience</h2>
-        <p>Experienced engineer focused on product design and customer focus, working on collaborative team environments.</p>
+        <div class="content-wrap">
+          <h2 class="centered">Work Experience</h2>
+          <p>
+            Experienced engineer focused on product design and customer focus,
+            working on collaborative team environments.
+          </p>
 
-        <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
-          <h3 class="centered">Highlights</h3>
-          <p>Optimization of Designs:</p>
-          <p>Researched, evaluated and implemented software applications to improve designs, production and operational processes.</p>
-          <p>Product Development:</p>
-          <p>Led website development team towards creating a functional website for a company dedicated to provide guidance and support to entrepreneurs.</p>
-          <p>Project Lyfe Cycle:</p>
-          <p>Participated in teams responsible for product conceptual design and throughout its complete life cycle, including initiation, planning, execution, control / monitoring and closing activities.</p>
-        </section>
-        <!-- End of Job block. -->
-      </div>
+          <!-- Copy this whole <section> block to add more jobs. -->
+          <section>
+            <h3 class="centered">Highlights</h3>
+            <p>Optimization of Designs:</p>
+            <p>
+              Researched, evaluated and implemented software applications to
+              improve designs, production and operational processes.
+            </p>
+            <p>Product Development:</p>
+            <p>
+              Led website development team towards creating a functional website
+              for a company dedicated to provide guidance and support to
+              entrepreneurs.
+            </p>
+            <p>Project Lyfe Cycle:</p>
+            <p>
+              Participated in teams responsible for product conceptual design
+              and throughout its complete life cycle, including initiation,
+              planning, execution, control / monitoring and closing activities.
+            </p>
+          </section>
+          <!-- End of Job block. -->
+        </div>
       </section>
 
       <!-- ***********  EDUCATION & CERTIFICATIONS ********** -->
       <section class="education">
-      <div class="content-wrap">
-        <h2 class="centered">Education</h2>
+        <div class="content-wrap">
+          <h2 class="centered">Education</h2>
 
-        <!-- Copy this whole <section> block to add more schools. -->
-        <section>
-          <h3>Bow Valley College - Calgary</h3>
-          <p>Full Stack Software Development, 2020</p>
-          <p>Web development, C# Programming and Databases.</p>
-        </section>
-        <section>
-          <h3>University of Calgary - Calgary</h3>
-          <p>Project Management Professional course, 2015</p>
-        </section>
-        <section>
-          <h3>University of Calgary - Calgary</h3>
-          <p>Master of Engineering (Mechanical), 2012</p>
-        </section>
-        <!-- End of School block. -->
-      </div>
+          <!-- Copy this whole <section> block to add more schools. -->
+          <section>
+            <h3 class="centered">Bow Valley College - Calgary</h3>
+            <p>Full Stack Software Development, 2020</p>
+            <p>Web development, C# Programming and Databases.</p>
+          </section>
+          <section>
+            <h3 class="centered">Lynda / Udemy Learning Courses</h3>
+            <p>HTML, CSS, Jira, Agile, Javascript</p>
+          </section>
+          <section>
+            <h3 class="centered">University of Calgary - Calgary</h3>
+            <p>Project Management Professional course, 2015</p>
+          </section>
+          <!-- End of School block. -->
+        </div>
       </section>
 
       <!-- **********  CONTACT INFO / SOCIAL MEDIA  ********* -->
       <footer>
-      <div class="content-wrap">
-        <h2>Let's Keep in Touch!</h2>
+        <div class="content-wrap">
+          <h2>Let's Keep in Touch!</h2>
 
-        <!-- Social media and contact links. Add or remove any networks. -->
-        <ul class="contact-list">
-          <li><a href="mailto:andresmonsalvo@yahoo.ca">andresmonsalvo@yahoo.ca</a></li>
-          <li><a href="https://andresmonsalvo.github.io/" target="_blank">GitHub</a></li>
-          <li><a href="tel:15877000940">(587) 700 0940</a></li>
-          <li><a href="https://www.linkedin.com/in/andresmonsalvo/" target="_blank">LinkedIn</a></li>
-        </ul>
-      </div>
+          <!-- Social media and contact links. Add or remove any networks. -->
+          <ul class="contact-list">
+            <li>
+              <a href="mailto:andresmonsalvo@yahoo.ca"
+                >andresmonsalvo@yahoo.ca</a
+              >
+            </li>
+            <li>
+              <a href="https://andresmonsalvo.github.io/" target="_blank"
+                >GitHub</a
+              >
+            </li>
+            <li><a href="tel:15877000940">(587)-700-0940</a></li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/andresmonsalvo/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
+          </ul>
+        </div>
       </footer>
     </main>
   </body>
