--- a/index.html
+++ b/index.html
@@ -39,13 +39,23 @@
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
-            <img src="thumbnail-2.jpg" alt="description of image" />
+            <img src="thumbnail-2.jpg" alt="working desk" />
             <h3>Simfoni Website</h3>
             <p>
               Let team of developers and participated in the design process of
               html, css and javascript portions of the project using
               collaboration tools as Github and project management tools as
               Jira, while following Agile concepts.
+            </p>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <section class="project-item">
+            <img src="website.jpg" alt="website in github" />
+            <h3>My Own Website</h3>
+            <p>
+              Created my own website page using html and css techniques and
+              Github collaboration tool.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
@@ -63,25 +73,38 @@
           </p>
 
           <!-- Copy this whole <section> block to add more jobs. -->
-          <section>
-            <h3 class="centered">Highlights</h3>
-            <p>Optimization of Designs:</p>
-            <p>
-              Researched, evaluated and implemented software applications to
-              improve designs, production and operational processes.
-            </p>
-            <p>Product Development:</p>
-            <p>
-              Led website development team towards creating a functional website
-              for a company dedicated to provide guidance and support to
-              entrepreneurs.
-            </p>
-            <p>Project Lyfe Cycle:</p>
-            <p>
-              Participated in teams responsible for product conceptual design
-              and throughout its complete life cycle, including initiation,
-              planning, execution, control / monitoring and closing activities.
-            </p>
+          <section class="job-item">
+            <!--<h3 class="centered">Highlights</h3>-->
+            <div class="job-details">
+              <p>Optimization of Designs:</p>
+            </div>
+            <div class="summary">
+              <p>
+                Researched, evaluated and implemented software applications to
+                improve designs, production and operational processes.
+              </p>
+            </div>
+            <div class="job-details">
+              <p>Product Development:</p>
+            </div>
+            <div class="summary">
+              <p>
+                Led website development team towards creating a functional
+                website for a company dedicated to provide guidance and support
+                to entrepreneurs.
+              </p>
+            </div>
+            <div class="job-details">
+              <p>Project Lyfe Cycle:</p>
+            </div>
+            <div class="summary">
+              <p>
+                Participated in teams responsible for product conceptual design
+                and throughout its complete life cycle, including initiation,
+                planning, execution, control / monitoring and closing
+                activities.
+              </p>
+            </div>
           </section>
           <!-- End of Job block. -->
         </div>
@@ -94,16 +117,16 @@
 
           <!-- Copy this whole <section> block to add more schools. -->
           <section>
-            <h3 class="centered">Bow Valley College - Calgary</h3>
+            <h3>Bow Valley College - Calgary</h3>
             <p>Full Stack Software Development, 2020</p>
             <p>Web development, C# Programming and Databases.</p>
           </section>
           <section>
-            <h3 class="centered">Lynda / Udemy Learning Courses</h3>
+            <h3>Lynda / Udemy Learning Courses</h3>
             <p>HTML, CSS, Jira, Agile, Javascript</p>
           </section>
           <section>
-            <h3 class="centered">University of Calgary - Calgary</h3>
+            <h3>University of Calgary - Calgary</h3>
             <p>Project Management Professional course, 2015</p>
           </section>
           <!-- End of School block. -->
