--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           <h2>Front and Back End Developer</h2>
           <p>
             As a developer, I specialize in creating front-end modular and
-            scalable architectures as well as back-end applications. As an
-            engineer, I am avid learner keen on improving designs and processes
+            scalable architectures as well as back-end applications. As a human
+            being, I am avid learner keen on improving designs and processes
             through team collaboration and software applications.
           </p>
           <h3>Areas of Expertise & Skills:</h3>
@@ -25,7 +25,9 @@
             <li>CSS3 |</li>
             <li>Javascript5 |</li>
             <li>C# |</li>
-            <li>SQL Server</li>
+            <li>SQL Server |</li>
+            <li>Agile |</li>
+            <li>Jira</li>
           </ul>
           <br />
         </div>
@@ -35,7 +37,7 @@
       <section class="projects">
         <div class="content-wrap">
           <h2 class="centered">Featured Projects</h2>
-          <p>View selected projects below.</p>
+          <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
@@ -52,10 +54,20 @@
           <br />
           <section class="project-item">
             <img src="website.jpg" alt="website in github" />
-            <h3>My Own Website</h3>
+            <h3>Andre's Website</h3>
             <p>
               Created my own website page using html and css techniques and
               Github collaboration tool.
+            </p>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <section class="project-item">
+            <img src="ntg.jpg" alt="store website" />
+            <h3>Store's Website</h3>
+            <p>
+              Created a store website page using html and css techniques offered
+              through a 3rd party application.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
@@ -91,7 +103,7 @@
               <p>
                 Led website development team towards creating a functional
                 website for a company dedicated to provide guidance and support
-                to entrepreneurs.
+                services to entrepreneurs.
               </p>
             </div>
             <div class="job-details">
@@ -126,7 +138,7 @@
             <p>HTML, CSS, Jira, Agile, Javascript</p>
           </section>
           <section>
-            <h3>University of Calgary - Calgary</h3>
+            <h3>University of Calgary</h3>
             <p>Project Management Professional course, 2015</p>
           </section>
           <!-- End of School block. -->
