--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <ul>
             <li>HTML5 |</li>
             <li>CSS3 |</li>
-            <li>Javascript |</li>
+            <li>JavaScript |</li>
             <li>C# |</li>
             <li>SQL Server |</li>
             <li>Agile |</li>
