Font type update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andres Monsalvo</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <!--Google Fonts Link-->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&display=swap"
+        rel="stylesheet">
+    <!--Font Awesome Icon Link-->
+    <script src="https://use.fontawesome.com/8fd9ed3f89.js"></script>
   </head>
   <body>
     <main>
