folder relocation and updates

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andres Monsalvo</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <!--Google Fonts Link-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&display=swap"
         rel="stylesheet">
@@ -46,7 +46,9 @@
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
-            <img src="thumbnail-2.jpg" alt="working desk" />
+            <a href="../html/projectSimfoni.html">
+            <img src="thumbnail-2.jpg" alt="simfoni" />
+            </a>
             <h3>Simfoni Website</h3>
             <p>
               Let team of developers and participated in the design process of
@@ -58,7 +60,9 @@
           </section>
           <br />
           <section class="project-item">
+            <a href="../html/projectSimfoni.html">
             <img src="website.jpg" alt="website in github" />
+            </a>
             <h3>Andre's Website</h3>
             <p>
               Created my own website page using html and css techniques and
@@ -68,7 +72,9 @@
           </section>
           <br />
           <section class="project-item">
+            <a href="../html/projectSimfoni.html">
             <img src="ntg.jpg" alt="store website" />
+            </a>
             <h3>Store's Website</h3>
             <p>
               Created a store website page using html and css techniques offered
