--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
             <a href="../html/projectSimfoni.html">
-            <img src="thumbnail-2.jpg" alt="simfoni" />
+            <img src="../img/indexSimfoni.jpg" alt="simfoni" />
             </a>
             <h3>Simfoni Website</h3>
             <p>
@@ -61,7 +61,7 @@
           <br />
           <section class="project-item">
             <a href="../html/projectSimfoni.html">
-            <img src="website.jpg" alt="website in github" />
+            <img src="../img/website.jpg" alt="website in github" />
             </a>
             <h3>Andre's Website</h3>
             <p>
@@ -73,7 +73,7 @@
           <br />
           <section class="project-item">
             <a href="../html/projectSimfoni.html">
-            <img src="ntg.jpg" alt="store website" />
+            <img src="../img/ntg.jpg" alt="store website" />
             </a>
             <h3>Store's Website</h3>
             <p>
