--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andres Monsalvo</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <!--Google Fonts Link-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&display=swap"
         rel="stylesheet">
@@ -46,8 +46,8 @@
 
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item">
-            <a href="../html/projectSimfoni.html">
-            <img src="../img/indexSimfoni.jpg" alt="simfoni" />
+            <a href="projectSimfoni.html">
+            <img src="indexSimfoni.jpg" alt="simfoni" />
             </a>
             <h3>Simfoni Website</h3>
             <p>
@@ -60,8 +60,8 @@
           </section>
           <br />
           <section class="project-item">
-            <a href="../html/projectSimfoni.html">
-            <img src="../img/website.jpg" alt="website in github" />
+            <a href="projectSimfoni.html">
+            <img src="website.jpg" alt="website in github" />
             </a>
             <h3>Andre's Website</h3>
             <p>
@@ -72,8 +72,8 @@
           </section>
           <br />
           <section class="project-item">
-            <a href="../html/projectSimfoni.html">
-            <img src="../img/ntg.jpg" alt="store website" />
+            <a href="projectSimfoni.html">
+            <img src="ntg.jpg" alt="store website" />
             </a>
             <h3>Store's Website</h3>
             <p>
