--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
-          <section class="project-item">
-            <a href="projectSimfoni.html">
-            <img src="indexSimfoni.jpg" alt="simfoni" />
+          <section class="project-item centered">
+            <a href="projectSimfoni.html" style="height: 181px;">
+            <img src="indexSimfoni.jpg" alt="simfoni" class="centered" />
             </a>
             <h3>Simfoni Website</h3>
             <p>
@@ -59,8 +59,8 @@
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <br />
-          <section class="project-item">
-            <a href="projectSimfoni.html">
+          <section class="project-item centered">
+            <a href="projectSimfoni.html" style="height: 274px;">
             <img src="website.jpg" alt="website in github" />
             </a>
             <h3>Andre's Website</h3>
@@ -71,8 +71,8 @@
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <br />
-          <section class="project-item">
-            <a href="projectSimfoni.html">
+          <section class="project-item centered">
+            <a href="projectSimfoni.html" style="height: 153px;">
             <img src="ntg.jpg" alt="store website" />
             </a>
             <h3>Store's Website</h3>
