--- a/about.html
+++ b/about.html
@@ -45,8 +45,10 @@
           <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
-          <section class="project-item">
-            <img src="thumbnail-2.jpg" alt="working desk" href="projectSimfoni.html"/>
+          <section class="project-item centered">
+            <a href="projectSimfoni.html" style="height: 181px;">
+            <img src="indexSimfoni.jpg" alt="simfoni" class="centered" />
+            </a>
             <h3>Simfoni Website</h3>
             <p>
               Let team of developers and participated in the design process of
@@ -57,8 +59,10 @@
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <br />
-          <section class="project-item">
+          <section class="project-item centered">
+            <a href="projectSimfoni.html" style="height: 274px;">
             <img src="website.jpg" alt="website in github" />
+            </a>
             <h3>Andre's Website</h3>
             <p>
               Created my own website page using html and css techniques and
@@ -67,8 +71,10 @@
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <br />
-          <section class="project-item">
+          <section class="project-item centered">
+            <a href="projectSimfoni.html" style="height: 153px;">
             <img src="ntg.jpg" alt="store website" />
+            </a>
             <h3>Store's Website</h3>
             <p>
               Created a store website page using html and css techniques offered
