--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andres Monsalvo</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <!--Google Fonts Link-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway:wght@400;700&display=swap"
         rel="stylesheet">
@@ -12,6 +12,19 @@
     <script src="https://use.fontawesome.com/8fd9ed3f89.js"></script>
   </head>
   <body>
+    <nav class="sticky">
+      <ul class="menu">
+        <!--<li><img width="40px" ; src="../img/FINAL_SLOGO.png" /></li>-->
+        <!--active-page is used to indicate current location-->
+        <li class="item"><a class="active-page" href="index.html">Home</a></li>
+        <li class="item"><a class="active-page" href="projects.html">Projects</a></li>
+        <li class="item"><a class="active-page" href="skills.html">Skills</a></li>
+        <li class="item"><a class="active-page" href="about.html">About</a></li>
+        <li class="toggle">
+          <a href="#"><i class="fas fa-bars"></i></a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <!-- **************  ABOUT / PROFILE  ************** -->
       <section class="profile">
@@ -24,112 +37,8 @@
             being, I am avid learner keen on improving designs and processes
             through team collaboration and software applications.
           </p>
-          <h3>Areas of Expertise & Skills:</h3>
-          <ul>
-            <li>HTML5 |</li>
-            <li>CSS3 |</li>
-            <li>JavaScript |</li>
-            <li>C# |</li>
-            <li>SQL Server |</li>
-            <li>Agile |</li>
-            <li>Jira</li>
-          </ul>
+          
           <br />
-        </div>
-      </section>
-
-      <!-- ***********  PROJECTS / PORTFOLIO  ******* -->
-      <section class="projects">
-        <div class="content-wrap">
-          <h2 class="centered">Featured Projects</h2>
-          <!--<p>View selected projects below.</p>-->
-
-          <!-- Copy the whole <section> block to add more projects. -->
-          <section class="project-item centered">
-            <a href="projectSimfoni.html" style="height: 181px;">
-            <img src="indexSimfoni.jpg" alt="simfoni" class="centered" />
-            </a>
-            <h3>Simfoni Website</h3>
-            <p>
-              Let team of developers and participated in the design process of
-              html, css and javascript portions of the project using
-              collaboration tools as Github and project management tools as
-              Jira, while following Agile concepts.
-            </p>
-            <!--<a href="#" target="_blank">View project / case study</a>-->
-          </section>
-          <br />
-          <section class="project-item centered">
-            <a href="projectSimfoni.html" style="height: 274px;">
-            <img src="website.jpg" alt="website in github" />
-            </a>
-            <h3>Andre's Website</h3>
-            <p>
-              Created my own website page using html and css techniques and
-              Github collaboration tool.
-            </p>
-            <!--<a href="#" target="_blank">View project / case study</a>-->
-          </section>
-          <br />
-          <section class="project-item centered">
-            <a href="projectSimfoni.html" style="height: 153px;">
-            <img src="ntg.jpg" alt="store website" />
-            </a>
-            <h3>Store's Website</h3>
-            <p>
-              Created a store website page using html and css techniques offered
-              through a 3rd party application.
-            </p>
-            <!--<a href="#" target="_blank">View project / case study</a>-->
-          </section>
-          <!-- End of Project block. -->
-        </div>
-      </section>
-
-      <!-- ***********  WORK EXPERIENCE  ************** -->
-      <section class="work">
-        <div class="content-wrap">
-          <h2 class="centered">Work Experience</h2>
-          <p>
-            Experienced engineer focused on product design and customer focus,
-            working on collaborative team environments.
-          </p>
-
-          <!-- Copy this whole <section> block to add more jobs. -->
-          <section class="job-item">
-            <!--<h3 class="centered">Highlights</h3>-->
-            <div class="job-details">
-              <p>Optimization of Designs:</p>
-            </div>
-            <div class="summary">
-              <p>
-                Researched, evaluated and implemented software applications to
-                improve designs, production and operational processes.
-              </p>
-            </div>
-            <div class="job-details">
-              <p>Product Development:</p>
-            </div>
-            <div class="summary">
-              <p>
-                Led website development team towards creating a functional
-                website for a company dedicated to provide guidance and support
-                services to entrepreneurs.
-              </p>
-            </div>
-            <div class="job-details">
-              <p>Project Lyfe Cycle:</p>
-            </div>
-            <div class="summary">
-              <p>
-                Participated in teams responsible for product conceptual design
-                and throughout its complete life cycle, including initiation,
-                planning, execution, control / monitoring and closing
-                activities.
-              </p>
-            </div>
-          </section>
-          <!-- End of Job block. -->
         </div>
       </section>
 
@@ -159,7 +68,7 @@
       <!-- **********  CONTACT INFO / SOCIAL MEDIA  ********* -->
       <footer>
         <div class="content-wrap">
-          <h2>Let's Keep in Touch!</h2>
+          <h2>My Contact Info!</h2>
 
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul class="contact-list">
@@ -185,5 +94,6 @@
         </div>
       </footer>
     </main>
+    <script src="index.js"></script>
   </body>
 </html>
