Added main picture

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
           <h1>Andres Monsalvo</h1>
           <h2>Full Stack Developer</h2>
         </div>
+        <div class="content-wrap">
+          <img src="pc1.jpg" alt="gcode"/>
+        </div>
+        <br/>
       </section>
 
       <section>
@@ -49,11 +53,7 @@
       </div>
       </section>
 
-      <section class="section1">
-        <div class="content-wrap">
-          <img src="gcode.jpg" alt="gcode"/>
-        </div>
-      </section>
+      
       <!-- ******* CONTACT INFO / SOCIAL MEDIA **** -->
       <section class="section3">
       <footer>
