--- a/skills.html
+++ b/skills.html
@@ -68,8 +68,7 @@
         <div class="content-wrap">
           <h2 class="centered">Work Experience</h2>
           <p>
-            Experienced engineer focused on product design and customer focus,
-            working on collaborative team environments.
+            Avid learner and designer, keen on product development and process optimization. Proactive, analytical, and collaborative with experience on projects and technical support.
           </p>
 
           <!-- Copy this whole <section> block to add more jobs. -->
