--- a/projects.html
+++ b/projects.html
@@ -74,12 +74,12 @@
       </section>
 
       <!-- ******  CONTACT INFO / SOCIAL MEDIA  ***** -->
-
+      <!--
       <footer>
         <div class="content-wrap">
-          <h2>My Contact Info!</h2>
+          <h2>My Contact Info!</h2>-->
 
-          <!-- Social media and contact links. Add or remove any networks. -->
+          <!-- Social media and contact links. Add or remove any networks. 
           <ul class="contact-list">
             <li>
               <a href="mailto:andresmonsalvo@yahoo.ca"
@@ -101,7 +101,7 @@
             </li>
           </ul>
         </div>
-      </footer>
+      </footer>-->
     </main>
     <script src="index.js"></script>
   </body>
