--- a/about.html
+++ b/about.html
@@ -26,27 +26,32 @@
       </ul>
     </nav>
     <main>
-      <!-- **************  ABOUT / PROFILE  ************** -->
+      <!-- ******  ABOUT / PROFILE  ******* -->
       <section class="profile">
         <div class="content-wrap">
-          <h1>Andres Monsalvo</h1>
-          <h2>Front and Back End Developer</h2>
+          <!--<h1>Andres Monsalvo</h1>-->
+          <h2>Full Stack Developer</h2>
+          <div>
           <p>
             As a developer, I specialize in creating front-end modular and
             scalable architectures as well as back-end applications. As a human
             being, I am avid learner keen on improving designs and processes
             through team collaboration and software applications.
           </p>
-          
+          </div>
+          <div class="content-wrap">
+            <img src="AM2.jpg" alt="andresMonsalvo" class="image"/>
+            <div class="middle">
+            <div class="text">Andres Monsalvo</div>
+            </div>
           <br />
-        </div>
+          </div>
       </section>
 
-      <!-- ***********  EDUCATION & CERTIFICATIONS ********** -->
+      <!-- ****  EDUCATION & CERTIFICATIONS **** -->
       <section class="education">
         <div class="content-wrap">
           <h2 class="centered">Education</h2>
-
           <!-- Copy this whole <section> block to add more schools. -->
           <section>
             <h3>Bow Valley College - Calgary</h3>
@@ -65,7 +70,7 @@
         </div>
       </section>
 
-      <!-- **********  CONTACT INFO / SOCIAL MEDIA  ********* -->
+      <!-- ****  CONTACT INFO / SOCIAL MEDIA  *** -->
       <footer>
         <div class="content-wrap">
           <h2>My Contact Info!</h2>
