--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
 
-      <!-- ********  PROJECTS / PORTFOLIO  ******* -->
+      <!-- *******  PROJECTS / PORTFOLIO  ***** -->
 
       <section class="projects">
         <div class="content-wrap">
@@ -51,9 +51,9 @@
             <a style="height: 274px;">
             <img src="website.jpg" alt="website in github" />
             </a>
-            <h3>Andre's Website</h3>
+            <h3>Andres' Github Profile</h3>
             <p>
-              Created my own GitHub profile pages using Advanced CSS Animations, Flexbox, Grid and JavaScript.
+              Created my own GitHub profile pages using HTML, Advanced CSS Animations, Flexbox, Grid and JavaScript.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
@@ -64,8 +64,7 @@
             </a>
             <h3>Store's Website</h3>
             <p>
-              Created my own e-commerce store website using html and css techniques offered
-              through a 3rd party application. And implemented API's.
+              Created my own e-commerce store website using HTML, CSS techniques, CMS management and implemented API's through a 3rd party application.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
@@ -73,7 +72,7 @@
         </div>
       </section>
 
-      <!-- ******  CONTACT INFO / SOCIAL MEDIA  ***** -->
+      <!-- ****  CONTACT INFO / SOCIAL MEDIA  **** -->
       <!--
       <footer>
         <div class="content-wrap">
