--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </section>
     <main>
-      <!-- *********  ABOUT / PROFILE  ********* -->
+      <!-- *********  ABOUT / PROFILE  ******* -->
       <section class="profile section2">
         <div class="content-wrap">
           <br/>
@@ -42,9 +42,11 @@
           <h2>Full Stack Developer</h2>
         </div>
         <div class="content-wrap">
-          <img src="pc1.jpg" alt="gcode"/>
+          <img src="pc2.jpg" alt="gcode" class="image"/>
+          <div class="middle"> 
+            <div class="text">Frontend and Backend</div>
+          </div>
         </div>
-        <br/>
       </section>
 
       <section>
@@ -54,7 +56,7 @@
       </section>
 
       
-      <!-- ******* CONTACT INFO / SOCIAL MEDIA **** -->
+      <!-- ***** CONTACT INFO / SOCIAL MEDIA **** -->
       <section class="section3">
       <footer>
         <div class="content-wrap">
