addition of projects

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
         <div class="content-wrap">
           <img src="pc2.jpg" alt="gcode" class="image"/>
           <div class="middle"> 
-            <div class="text">Frontend and Backend</div>
+            <!--<div class="text">Frontend and Backend</div>-->
           </div>
         </div>
+        <br/>
       </section>
 
       <section>
