--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,26 @@
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
+          <section class="project-item centered">
+            <a style="height: 153px;">
+            <img src="cashier.jpg" alt="additional projects" />
+            </a>
+            <h3>Cashier Calculator</h3>
+            <p>
+              Design project using HTML, CSS and JavaScript.
+            </p>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <section class="project-item centered">
+            <a style="height: 153px;">
+            <img src="bikeparks.jpg" alt="additional projects" />
+            </a>
+            <h3>Bike Parks in Canada Website</h3>
+            <p>
+              Design project using HTML, CSS, animations and embedded video.
+            </p>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
           <!-- End of Project block. -->
         </div>
       </section>
