--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
             </a>
             <h3>Andres' Github Profile</h3>
             <p>
-              Created my own GitHub profile pages using HTML, Advanced CSS Animations, Flexbox, Grid and JavaScript.
+              Created my own GitHub profile pages using HTML, responsive, Advanced CSS Animations, Flexbox, Grid and JavaScript.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
@@ -74,7 +74,7 @@
             </a>
             <h3>Cashier Calculator</h3>
             <p>
-              Design project using HTML, CSS and JavaScript.
+              Design responsive application using HTML, CSS and JavaScript.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
@@ -84,7 +84,7 @@
             </a>
             <h3>Bike Parks in Canada Website</h3>
             <p>
-              Design project using HTML, CSS, animations and embedded video.
+              Design project using HTML, CSS, animations, responsive style and embedded video.
             </p>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
