added hobbies section

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
           <p>
             As a developer, I specialize in creating front-end modular and
             scalable architectures as well as back-end applications. As a human
-            being, I am avid learner keen on improving designs and processes
+            being I am avid learner keen on improving designs and processes
             through team collaboration and software applications.
           </p>
           </div>
@@ -68,6 +68,18 @@
           </section>
           <!-- End of School block. -->
         </div>
+      </section>
+
+      <!-- ******  HOBBIES  ******* -->
+      <section class="profile">
+        <div class="content-wrap">
+          <!--<h1>Andres Monsalvo</h1>-->
+          <h2>Hobbies</h2>
+          <section>
+            <p>Mountain Biking</h3>
+            <p>AI enthusiast</p>
+            <p>Outdoor Activities</p>
+          </section>
       </section>
 
       <!-- ****  CONTACT INFO / SOCIAL MEDIA  *** -->
