--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
           </p>
           </div>
           <div class="content-wrap">
-            <img src="am.jpg" alt="andresMonsalvo" class="image"/>
+            <img src="am2.png" alt="andresMonsalvo" class="image"/>
             <div class="middle">
             <div class="text">Andres Monsalvo</div>
             </div>
