--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,7 @@
               Led a team of developers and collaborated in the creative design process using HTML5, CSS3, JavaScript, Node.js and SQL-Server database. Used collaboration tools as Github and project management tools as
               Jira, while following Agile methodology.
             </p>
+            <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <br />
@@ -55,6 +56,7 @@
             <p>
               Created my own GitHub profile pages using HTML, responsive, Advanced CSS Animations, Flexbox, Grid and JavaScript.
             </p>
+            <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <br />
@@ -66,6 +68,7 @@
             <p>
               Created my own e-commerce store website using HTML, CSS techniques, CMS management and implemented API's through a 3rd party application.
             </p>
+            <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <section class="project-item centered">
@@ -76,6 +79,7 @@
             <p>
               Design responsive application using HTML, CSS and JavaScript.
             </p>
+            <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <section class="project-item centered">
@@ -86,11 +90,24 @@
             <p>
               Design project using HTML, CSS, animations, responsive style and embedded video.
             </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <section class="project-item centered">
+            <a style="height: 125px;">
+            <img src="robofriends.jpg" alt="additional projects" />
+            </a>
+            <h3>Robofriends</h3>
+            <p>
+              Design project using React.
+            </p>
+            <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
           <!-- End of Project block. -->
         </div>
       </section>
+     
 
       <!-- ****  CONTACT INFO / SOCIAL MEDIA  **** -->
       <!--
