--- a/about.html
+++ b/about.html
@@ -66,6 +66,10 @@
             <h3>University of Calgary</h3>
             <p>Project Management Professional course, 2015</p>
           </section>
+          <section>
+            <h3>University of Calgary</h3>
+            <p>Master of Engineering, 2012</p>
+          </section>
           <!-- End of School block. -->
         </div>
       </section>
