--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           </section>
           <section>
             <h3>Lynda / Udemy Learning Courses</h3>
-            <p>HTML, CSS, Jira, Agile, Javascript</p>
+            <p>HTML, CSS, Jira, Agile, Javascript, Reacts</p>
           </section>
           <section>
             <h3>University of Calgary</h3>
