--- a/skills.html
+++ b/skills.html
@@ -38,6 +38,7 @@
                     <li>JavaScript</li>
                     <li>React</li>
                     <li>Express</li>
+                    <li>Nodejs</li>
                   </ul>
                 </div>
                 <div>
@@ -47,6 +48,7 @@
                     <li>Flexbox</li>
                     <li>Grid</li>
                     <li>SQL Server</li>
+                    <li>PostgreSQL</li>
                   </ul>
                 </div>
                 <div>
@@ -56,6 +58,7 @@
                     <li>Jira</li>
                     <li>Animations</li>
                     <li>Agile</li>
+                    <li>API</li>
                   </ul>
                 </div>
         </div>
