--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
       <section class="profile">
         <div class="content-wrap">
           <!--<h1>Andres Monsalvo</h1>-->
-          <h2>Full Stack Developer</h2>
+          <h2>Developer - Data Science - Engineer</h2>
           <div>
           <p>
             As a developer, I specialize in creating front-end modular and
             scalable architectures as well as back-end applications. As a human
             being I am avid learner keen on improving designs and processes
-            through team collaboration and software applications.
+            through data analysis, team collaboration and software applications.
           </p>
           </div>
           <div class="content-wrap">
@@ -60,7 +60,7 @@
           </section>
           <section>
             <h3>Lynda / Udemy Learning Courses</h3>
-            <p>HTML, CSS, Jira, Agile, Javascript, React</p>
+            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning</p>
           </section>
           <section>
             <h3>University of Calgary</h3>
@@ -78,7 +78,7 @@
           <h2>Hobbies</h2>
           <section>
             <p>Mountain Biking</h3>
-            <p>AI enthusiast</p>
+            <p>AI Machine Learning enthusiast</p>
             <p>Outdoor Activities</p>
           </section>
       </section>
