--- a/skills.html
+++ b/skills.html
@@ -39,6 +39,7 @@
                     <li>React</li>
                     <li>Express</li>
                     <li>Nodejs</li>
+                    <li>Data Analytics</li>
                   </ul>
                 </div>
                 <div>
@@ -49,6 +50,7 @@
                     <li>Grid</li>
                     <li>SQL Server</li>
                     <li>PostgreSQL</li>
+                    <li>Data Science</li>
                   </ul>
                 </div>
                 <div>
@@ -59,6 +61,7 @@
                     <li>Animations</li>
                     <li>Agile</li>
                     <li>API</li>
+                    <li>Machine Learning</li>
                   </ul>
                 </div>
         </div>
@@ -105,6 +108,14 @@
                 and throughout its complete life cycle, including initiation,
                 planning, execution, control / monitoring and closing
                 activities.
+              </p>
+            </div>
+            <div class="job-details">
+              <p>Machine Learning:</p>
+            </div>
+            <div class="summary">
+              <p>
+                Machine learning knowledge and enthusiast. Currently learning about this topic in a daily basis and hope to be involved and working with an ML team in the near future.
               </p>
             </div>
           </section>
