--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="content-wrap">
           <br/>
           <h1>Andres Monsalvo</h1>
-          <h2>Full Stack Developer</h2>
+          <h2>Developer - Data Science - Engineer</h2>
         </div>
         <div class="content-wrap">
           <img src="pc2.jpg" alt="gcode" class="image"/>
