--- a/skills.html
+++ b/skills.html
@@ -115,7 +115,7 @@
             </div>
             <div class="summary">
               <p>
-                Machine learning knowledge and enthusiast. Currently learning about this topic in a daily basis and hope to be involved and working with an ML team in the near future.
+                Machine learning knowledge and enthusiast. Currently learning about this topic in a daily basis and can see myself more involved and working with an ML team in the near future.
               </p>
             </div>
           </section>
