AI skills' updates

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
             As a developer, I specialize in creating front-end modular and
             scalable architectures as well as back-end applications. As a human
             being I am avid learner keen on improving designs and processes
-            through data analysis, team collaboration and software applications.
+            through data analysis, data science, team collaboration and software applications.
           </p>
           </div>
           <div class="content-wrap">
@@ -60,7 +60,7 @@
           </section>
           <section>
             <h3>Lynda / Udemy Learning Courses</h3>
-            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning</p>
+            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning and Data Science</p>
           </section>
           <section>
             <h3>University of Calgary</h3>
